Fix close button being pushed out of clipped tabs

--- a/chrome/_tabbar.css
+++ b/chrome/_tabbar.css
@@ -202,11 +202,15 @@
 	color: var(--toolbar-color) !important;
 }
 
-.tab-icon-image,
 .tab-throbber,
 .tab-throbber-fallback
 {
 	margin-inline-end: 8px !important;
+}
+
+.tab-icon-image
+{
+	margin: 0 !Important;
 }
 
 /* hide new tab favicon */
@@ -219,6 +223,11 @@
 {
 	margin-top: -2px !important;
 	opacity: 1 !important;
+}
+
+.tabbrowser-tab[image]:not([image^="chrome://branding/"]) .tab-label-container
+{
+	padding-inline-start: 8px !important;
 }
 
 .tabbrowser-tab[fadein] .tab-close-button
@@ -272,9 +281,26 @@
 	padding-inline-start: 8px !important;
 }
 
+#tabbrowser-tabs[closebuttons=activetab] .tabbrowser-tab[image]:not([image^="chrome://branding/"]) .tab-label-container
+{
+	padding-inline-start: 8px !important;
+}
+
 #tabbrowser-tabs[closebuttons=activetab] .tabbrowser-tab:not([visuallyselected]) .tab-close-button
 {
 	visibility: collapse !important;
+}
+
+#tabbrowser-tabs[closebuttons=activetab] .tab-label-container[textoverflow][labeldirection="ltr"]:not([pinned]),
+#tabbrowser-tabs[closebuttons=activetab] .tab-label-container[textoverflow]:not([labeldirection]):-moz-locale-dir(ltr):not([pinned])
+{
+    mask-image: linear-gradient(to right, black 70%, transparent) !important;
+}
+
+#tabbrowser-tabs[closebuttons=activetab] .tab-label-container[textoverflow][labeldirection="rtl"]:not([pinned]),
+#tabbrowser-tabs[closebuttons=activetab] .tab-label-container[textoverflow]:not([labeldirection]):-moz-locale-dir(rtl):not([pinned])
+{
+    mask-image: linear-gradient(to left, black 70%, transparent) !important;
 }
 
 /* overflowing and pinned tabs */
